a4/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red
        ports:
        - containerPort: 1880
          name: node-red-ui
        volumeMounts:
        - name: node-red-data
          mountPath: /data
      volumes:
      - name: node-red-data
        persistentVolumeClaim:
          claimName: node-red-claim
