a4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rode-red-service
spec:
  selector:
    app: node-red
  type: LoadBalancer
  ports:
    - name: node-red-ui
      port: 1880
      protocol: TCP
      targetPort: node-red-ui
