a4/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: rode-red-route
spec:
  host: nodered.student474.rahtiapp.fi
  port:
    targetPort: 1880
  tls:
    termination: passthrough
  to:
    kind: Service
    name: rode-red-service
    weight: 100
